--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">My iTime</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">未登录</string>
+    <string name="nav_header_subtitle">点击使用微信登录</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">计时</string>
+    <string name="menu_label">标签</string>
+    <string name="menu_component">小部件</string>
+    <string name="menu_color">主题色</string>
+    <string name="menu_advanced">高级版</string>
+    <string name="menu_settings">设置</string>
+    <string name="menu_info">关于</string>
+    <string name="menu_help">帮助与反馈</string>
 </resources>
